# vim: set noexpandtab:

2012-10-18 Anyes
	* Add feature to check for duplicate events in data
	
2012-10-14 Steve
	* Tagging SusyNtuple-00-00-32

2012-10-12 Anyes	
	* Remove the const in the typedef LeptonVector etc... 
	* Fix TGuiUtils - draw stack - y-axis range behaviour
	* Update MCTruthClassifier file to 00-00-23 tag. 
	  Should have no effect beside the enum matching what we have in SusyNt.

2012-10-10 Anyes
	* Added copy & = constructor to all classes beside the Event class.

2012-10-07 Steve
	* Added getEventWeightFixed, for fixing the sumw in Sherpa_Zmumu inclusive
		* In the next ntuple tag we can go back to using the standard function

2012-10-06 Steve
	* Added option to TrilTrigLogic to only apply acceptance cuts 
	  (pt thresholds) and not require matching
	* Added function to check if sample is sherpa (by mc_channel_number)

2012-10-05 Steve
	* Added isSherpaSample(mcID)
	* Put evtFlag back into SusyEvent to recover some backwards compatibility
		* I _think_ this will work
		* Bits won't be set in latest ntuples

2012-10-04 Matt
	* Changed default trigger initializtion to HCP

2012-10-03 Steve
	* Added larError flag to Event class
	* Added ECut_TileErr to enum
	* Tagging SusyNtuple-00-00-31

2012-10-03 Anyes
	* fix getEventWeight constructor to use LUMI_A_E such as to get correct evt weight for 13/fb

2012-10-02 Steve
	* Added new EventCleaningCuts enum and flags to Event class
		* Will replace the evtFlag bit word currently stored
		* Contains flags for all cuts in SusyNtMaker so that we can turn off
		  all filtering and still save the flags to apply the cuts later
	* Updated evtFlag usage to cutFlags
	* Tagging SusyNtuple-00-00-30

2012-09-30 Anyes
	* Add functions for finding jet in bad FCAL regions

2012-09-26 Steve
	* Added lumi constant for A-E (13/fb)
	* Tagging SusyNtuple-00-00-29

2012-09-24 Serhan Mete <amete@cern.ch>
	* SusyNtuple/SusyDefs.h: Fix space in "EES_Z_UP[ ]" in SusyNtSystNames

2012-09-22 Anyes