@@ -302,8 +302,8 @@ double DilTrigLogic::getTriggerWeightEE(LeptonVector leptons, SusyNtSys sys)
   }
 
   int trigSys = 0; 
-  if(sys == NtSys_TRIGSF_UP)      trigSys = 1;
-  else if(sys == NtSys_TRIGSF_DN) trigSys = -1;
+  if(sys == NtSys_TRIGSF_EL_UP)      trigSys = 1;
+  else if(sys == NtSys_TRIGSF_EL_DN) trigSys = -1;
 
   double pt0  = leptons[0]->Pt() * 1000.;
   double eta0 = leptons[0]->Eta();
@@ -324,8 +324,8 @@ double DilTrigLogic::getTriggerWeightMM(LeptonVector leptons, SusyNtSys sys)
   }
 
   int trigSys = 0;
-  if(sys == NtSys_TRIGSF_UP)      trigSys = 1;
-  else if(sys == NtSys_TRIGSF_DN) trigSys = -1; 
+  if(sys == NtSys_TRIGSF_MU_UP)      trigSys = 1;
+  else if(sys == NtSys_TRIGSF_MU_DN) trigSys = -1; 
 
   double pt0  = leptons[0]->Pt() * 1000.;
   double eta0 = leptons[0]->Eta();
@@ -350,8 +350,10 @@ double DilTrigLogic::getTriggerWeightEM(LeptonVector leptons, SusyNtSys sys)
   }
 
   int trigSys = 0;
-  if(sys == NtSys_TRIGSF_UP)      trigSys = 1;
-  else if(sys == NtSys_TRIGSF_DN) trigSys = -1;
+  if(sys == NtSys_TRIGSF_EL_UP)      trigSys = 1;
+  else if(sys == NtSys_TRIGSF_EL_DN) trigSys = -1;
+  else if(sys == NtSys_TRIGSF_MU_UP) trigSys = 2;
+  else if(sys == NtSys_TRIGSF_MU_DN) trigSys = -2;
 
   bool isElec0 = leptons[0]->isEle();
 
